fix: align edit icon

--- a/components-ui/icon/styles.module.css
+++ b/components-ui/icon/styles.module.css
@@ -2,7 +2,7 @@
   padding: 0;
   display: inline-flex;
   align-items: center;
-  justify-content: baseline;
+  justify-content: center;
   flex-direction: row;
   flex-wrap: nowrap;
 }
